# Security_Provenance_Automated_OWASP

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  run_llm_analysis.py
docs/: sample-eval.sarif  sample-session.md
fixtures/javascript_eval/: app.js
fixtures/python_eval/: app.py
fixtures/typescript_authz/: app.ts
spao/: __init__.py  __main__.py  cli.py  config.py  models.py
spao/approval/: __init__.py  state.py
spao/fix/: __init__.py  apply.py  planner.py  providers.py
spao/gitops/: push.py  service.py
spao/graph/: __init__.py  backends.py  queries.py  schema.py  store.py
spao/graphrag/: __init__.py  embeddings.py  retrieval.py  store.py
spao/indexer/: __init__.py  ingest.py  js_ts_parser.js  parsers.py
spao/llm/: __init__.py  analyzer.py
spao/policy/: __init__.py  catalog.py
spao/policy/catalogs/: owasp_api_top10_2023.json  owasp_asvs_5.json  owasp_cheat_sheets.json  owasp_mobile_top10_2024.json  owasp_top10_2021.json  owasp_wstg_stable.json
spao/sarif/: __init__.py  models.py  parser.py
spao/scanners/: base.py  runner.py
spao/triage/: __init__.py  service.py
spao/verify/: service.py
tests/: test_analyze.py  test_approvals.py  test_fix_apply.py  test_fix_plan.py  test_graph.py  test_ingest.py  test_init.py  test_repo_pull.py  test_verify.py
