[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spao"
version = "0.3.0"
description = "Security Provenance Automated OWASP proof-of-concept CLI"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "darthmanwe" }
]
dependencies = []

[project.optional-dependencies]
llm = ["anthropic>=0.39"]
neo4j = ["neo4j>=5.0"]
graphrag = ["sentence-transformers>=3.0"]
all = ["anthropic>=0.39", "neo4j>=5.0", "sentence-transformers>=3.0"]

[project.scripts]
spao = "spao.cli:main"

[tool.setuptools.packages.find]
include = ["spao*"]
